@@ -1,4 +1,5 @@
 --- v3.3 (2018-xx-xx) ---
+* Update package protobuf: make also binary executable for host system.
 * Update in all configs:
   - PROTOBUF_VER from 3.5.1 to 3.6.1
 
